--- a/views/Pantalla-2.html
+++ b/views/Pantalla-2.html
@@ -21,7 +21,7 @@
     </div>
   </div>
   <nav class="navbar navbar-inverse bg-inverse">
-    <img class="col-4 col-sm-4 col-md-2 col-lg-2" src="../assets/images/soundfilm.jpg" alt="logo">
+    <img class="col-4 col-sm-4 col-md-2 col-lg-2 rounded mx-auto d-block" src="../assets/images/soundfilm.jpg" alt="logo">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -41,7 +41,7 @@
 </div>
       </nav> -->
     <!-- carrusel -->
-    <div id="carouselExampleSlidesOnly" class="carousel slide m-40 " data-ride="carousel">
+    <div id="carouselExampleSlidesOnly" class="carousel slide m-40" data-ride="carousel">
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
           <img class="d-block img-fluid" src="../assets/images/avatar.jpg" alt="First slide">
