--- a/views/Pantalla-4.html
+++ b/views/Pantalla-4.html
@@ -119,19 +119,15 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
               </div>
               <div class="main-modal">
-                <div id="poster-modal" class="col-8 col-sm-8 col-md-8 col-lg-8 text-center poster-modal">
-
+                <div id="poster-modal" class="col-8 col-sm-8 col-md-8 col-lg-8 offset-2 text-center poster-modal">
                 </div>
-                <div id="movie-tab" class="col-8 col-sm-8 col-md-8 col-lg-8 text-center movie-tab">
+                <div id="movie-tab" class="col-8 col-sm-8 col-md-8 col-lg-8 offset-2 text-center movie-tab">
                   <div id="information" class="col-12 col-sm-12 col-md-12 col-lg-12 information">
-
                   </div>
                   <div class="icons">
-                   <a href="../views/pantalla-5.html"><i class="fa fa-music"></i></a>
+                    <a href="../views/pantalla-5.html"><i class="fa fa-music"></i></a>
                   </div>
-
                 </div>
-
               </div>
             </div>
           </div>
@@ -139,7 +135,7 @@
 
 
         <footer class="col-12 col-sm-12 col-md-12 col-lg-12">
-          <div class="offset-4 credits">
+          <div class="offset-3 credits">
               <h4 class="offset-2">CREDITS</h4>
               <div class="row brenda">
                <h5>BRENDA MILIÁN</h5><p>BY</p> <a href="#"><h6>LABORATORIA MÉXICO</h6></a>
