--- a/views/Pantalla-5.html
+++ b/views/Pantalla-5.html
@@ -18,32 +18,38 @@
         <i class="pull-right fa fa-bars"></i>
      </nav>
      <section class="container">
-      <div class="row offset-6 movie">
-        <div id="poster-movie" class="col-3 col-sm-3 col-md-3 col-lg-3 poster">
-
+      <!-- xs -->
+      <div class="row offset-5 movie">
+        <div id="poster-movie" class="col-2 col-sm-2 col-md-2 col-lg-2 poster">
         </div>
         <div id="title-movie" class="name">
           <h1>TITLE</h1>
         </div>
       </div>
 
+      <!--- --->
       <div class="row offset-3">
        <span class="col-12 col-sm-12 col-md-10 col-lg-10 song">
-       <i class="pull-left fa fa-music"></i>
-       <h2 id="title-song" class="text-center">TITLE</h2>
+       <h2 id="title-song" class="pull-left">TITLE</h2>
        <i class="pull-right fa fa-ellipsis-v"></i>
        </span>
-       <span class="col-10 col-sm-10 col-md-10 col-lg-10 col-offset-4 col-sm-offset-4 col-md-offset-4 col-lg-offset-4 song">
+       <span class="col-12 col-sm-12 col-md-10 col-lg-10 col-offset-4 col-sm-offset-4 col-md-offset-4 col-lg-offset-4 song">
+         <h2 id="title-song" class="pull-left">TITLE</h2>
+         <i class="pull-right fa fa-ellipsis-v"></i>
        </span>
-       <span class="col-10 col-sm-10 col-md-10 col-lg-10 col-offset-4 col-sm-offset-4 col-md-offset-4 col-lg-offset-4 song">
+       <span class="col-12 col-sm-12 col-md-10 col-lg-10 col-offset-4 col-sm-offset-4 col-md-offset-4 col-lg-offset-4 song">
+         <h2 id="title-song" class="pull-left">TITLE</h2>
+         <i class="pull-right fa fa-ellipsis-v"></i>
        </span>
-       <span class="col-10 col-sm-10 col-md-10 col-lg-10 col-offset-4 col-sm-offset-4 col-md-offset-4 col-lg-offset-4 song">
+       <span class="col-12 col-sm-12 col-md-10 col-lg-10 col-offset-4 col-sm-offset-4 col-md-offset-4 col-lg-offset-4 song">
+         <h2 id="title-song" class="pull-left">TITLE</h2>
+         <i class="pull-right fa fa-ellipsis-v"></i>
        </span>
       </div>
     </section>
 
      <footer class="col-12 col-sm-12 col-md-12 col-lg-12">
-       <div class="offset-4 credits">
+       <div class="offset-3 credits">
            <h4 class="offset-2">CREDITS</h4>
            <div class="row brenda">
             <h5>BRENDA MILIÁN</h5><p>BY</p> <a href="#"><h6>LABORATORIA MÉXICO</h6></a>
